# colima-services

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CRITICAL_ISSUES_STATUS.md  DEPENDENCY_UPGRADE_REPORT.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_STATUS.md  FIXES.md  Makefile  README.md  RUST_DOCUMENTATION_UPDATE.md  SECURITY.md  USAGE.md  WIKI_SETUP_GUIDE.md  WIKI_SYNC_SUMMARY.md  docker-compose.yml  manage-colima.sh  manage-devstack.py  manage-devstack.sh  profiles.yaml  requirements-dev.txt
.github/: CHANGELOG.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
docs/: ACKNOWLEDGEMENTS.md  ARCHITECTURE.md  AUTOMATION_INFRASTRUCTURE_DESIGN.md  BEST_PRACTICES.md  DISASTER_RECOVERY.md  DOCUMENTATION_ROADMAP.md  ENVIRONMENT_VARIABLES.md  FAQ.md  IDE_SETUP.md  INSTALLATION.md  LINK_FIXES_SUMMARY.md  MANAGEMENT.md  OBSERVABILITY.md  PERFORMANCE_BASELINE.md  PERFORMANCE_TUNING.md  PROFILE_IMPLEMENTATION_GUIDE.md  PROFILE_TESTING_CHECKLIST.md  PROFILE_VALIDATION_RESULTS.md  PYTHON_CLI_COMPLETE_REFERENCE.md  PYTHON_MANAGEMENT_SCRIPT.md  README.md  REDIS.md  SECURITY_ASSESSMENT.md  (+10 more)
tests/: NEW_TESTS_SUMMARY.md  README.md  TEST_COVERAGE.md  TEST_IMPROVEMENTS.md  pyproject.toml  requirements.txt  run-all-tests.sh  setup-test-env.sh  test-fastapi.sh  test-mongodb.sh  test-mysql.sh  test-network-segmentation.sh  test-observability.sh  test-pgbouncer.sh  test-postgres-extended.sh  test-postgres.sh  test-rabbitmq.sh  test-redis-cluster.sh  test-redis.sh  test-tls-enabled.sh  test-vault-extended.sh  test-vault.sh
(+151 files in other folders)
